--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -31,8 +31,11 @@
     "@fluent/bundle": "^0.17.1",
     "@fluent/dom": "^0.8.1",
     "css-loader": "^6.5.1",
+    "express": "^4.17.2",
     "fluent-loader": "^1.0.1",
     "melonjs": "^10.2.3",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
     "style-loader": "^3.3.1"
   }
 }
