--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@swc/cli": "^0.1.55",
     "@swc/core": "^1.2.124",
     "chokidar": "^3.5.2",
-    "copy-webpack-plugin": "^10.2.0",
     "favicons": "^6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
     "fs": "^0.0.1-security",
@@ -24,12 +23,14 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --mode=development --config webpack.config.js",
-    "build": "webpack --mode=production --config webpack.config.js"
+    "build": "webpack --mode=production --config webpack.config.js",
+    "server": "./src/server.js"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@fluent/bundle": "^0.17.1",
     "@fluent/dom": "^0.8.1",
+    "args-parser": "^1.3.0",
     "css-loader": "^6.5.1",
     "express": "^4.17.2",
     "fluent-loader": "^1.0.1",
